# ffmpeg

./: README.md
FFmpegDemo/app/: CMakeLists.txt  build.gradle
FFmpegDemo/app/src/androidTest/java/com/ffmpeg/demo/: ExampleInstrumentedTest.kt
FFmpegDemo/app/src/main/: AndroidManifest.xml
FFmpegDemo/app/src/main/cpp/: AVpacket_queue.c  AVpacket_queue.h  ffmpeg_cmd.c  media_player.c  media_player.h
FFmpegDemo/app/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c
FFmpegDemo/app/src/main/cpp/include/libavformat/: network.h  os_support.h
FFmpegDemo/app/src/main/cpp/include/libavutil/: internal.h  timer.h
FFmpegDemo/app/src/main/java/com/ffmpeg/demo/: FFmpegCmd.kt  MediaPlayer.java
FFmpegDemo/app/src/main/java/com/ffmpeg/demo/activity/: BaseActivity.kt  HandleActivity.kt  MainActivity.kt  MediaPlayerActivity.kt  VideoHandlerActivity.kt
FFmpegDemo/app/src/main/java/com/ffmpeg/demo/activity/adapter/: HandleAdapter.kt
FFmpegDemo/app/src/main/java/com/ffmpeg/demo/model/: HandleItem.kt
FFmpegDemo/app/src/main/java/com/ffmpeg/demo/util/: FileUtils.java
FFmpegDemo/app/src/main/res/layout/: activity_handler_list.xml  activity_main.xml  activity_media_player.xml  item_handle_action.xml
FFmpegDemo/app/src/test/java/com/ffmpeg/demo/: ExampleUnitTest.kt
FFmpegDemo/gradle/wrapper/: gradle-wrapper.properties
